feat: fourth week is written. typo fixes.

--- a/main.tex
+++ b/main.tex
@@ -28,10 +28,11 @@
 \tableofcontents
 \newpage
 
-\indent\indent Bu rapor, İstanbul Üniversitesi Tarih Bölümü Dr. Öğr. Üyesi Burcu Kutlu Dilbaz tarafından verilen Müze Uygulamaları II(TARH3071) dersinde anlatılan konular, incelenen eserler, ders notları ve öğrencinin kendi araştırmları baz alınarak hazırlanmıştır.
+\indent\indent Bu rapor, İstanbul Üniversitesi Tarih Bölümü Dr. Öğr. Üyesi Burcu Kutlu Dilbaz tarafından verilen Müze Uygulamaları II(TARH3071) dersinde anlatılanlar, incelenen eserler, ders notları ve öğrencinin kendi araştırmları baz alınarak hazırlanmıştır.
 \input{sections/first_week/first_week}
 \input{sections/second_week/second_week}
 \input{sections/third_week/third_week}
+\input{sections/fourth_week/fourth_week}
 \newpage
 \printbibliography
 
