--- a/references.bib
+++ b/references.bib
@@ -64,7 +64,7 @@
 }
 
 @phdthesis{dilbaz_1,
-    author = {Burcu Kutlu Dilbaz},
+    author = {Dilbaz, Burcu Kutlu},
     title = {Anadolu'daki Arkeolojik Kazılar (1860-1910)},
     school = {İstanbul üniversitesi},
     year = {2014},
@@ -72,7 +72,7 @@
 }
 
 @phdthesis{dilbaz_2,
-    author = {Burcu Kutlu Dilbaz},
+    author = {Dilbaz, Burcu Kutlu},
     title = {Anadolu'daki Arkeolojik Kazılar (1860-1910)},
     school = {İstanbul üniversitesi},
     year = {2014},
@@ -80,7 +80,7 @@
 }
 
 @inbook{dia_1,
-    author = {Filiz Gündüz},
+    author = {Gündüz, Filiz},
     title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
     publisher = {Türkiye Diyanet Vakfı},
     year = {2007},
@@ -90,7 +90,7 @@
 }
 
 @inbook{dia_2,
-    author = {Nazan Ölçer},
+    author = {Ölçer, Nazan},
     title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
     publisher = {Türkiye Diyanet Vakfı},
     year = {2012},
@@ -100,7 +100,7 @@
 }
 
 @inbook{dia_3,
-    author = {Semavi Eyice},
+    author = {Eyice, Semavi},
     title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
     publisher = {Türkiye Diyanet Vakfı},
     year = {2000},
@@ -110,7 +110,7 @@
 }
 
 @inbook{shaw,
-    author = {Wendy M. K. Shaw},
+    author = {Shaw, Wendy M. K.},
     title = {Osmanlı Müzeciliği},
     publisher = {İletişim Yayınları},
     edition={3},
@@ -119,7 +119,7 @@
 }
 
 @inbook{atasoy_1,
-    author = {Nurhan Atasoy},
+    author = {Atasoy, Nurhan},
     title = {İbrahim Paşa Sarayı},
     publisher = {T.C. Kültür Ve Turizm Bakanlığı Yayınları},
     edition={2},
@@ -164,4 +164,13 @@
     chapter = {İbrâhim Bey İmareti ve Kümbeti},
     volume = {21},
     pages = {131--132}
+}
+
+@article{euphemia, 
+    title={Bizanslılar, Azizleri ve Khalkedon'lu Azize Euphemia}, journal={Sanat Dünyamız}, 
+    year={1998}, 
+    author={Akyürek, Engin}, 
+    number={69--70}, 
+    publisher={Yapı Kredi Kültüt Sanat Yayıncılık A.Ş.}, 
+    pages={175--183}
 }
