--- a/sections/first_week/first_week.tex
+++ b/sections/first_week/first_week.tex
@@ -1,4 +1,4 @@
-\section{Birinci Hafta}
+\section{Birinci Hafta - Türk İslam Eserleri Müzesi}
 \indent\indent Türk ve İslam Eserleri Müzesi’ndeki bu ilk dersimizde, müzenin halı sergileri salonunda, Hocamız Dr. Öğr. Üyesi Burcu Kutlu Dilbaz tarafından müzelerin tarihi ve önemi, müzelere giriş, Osmanlı Devleti’nde müzenin kuruluşu ve Türkiye'de müzelerin tarihi nedir ve nasıl gelişmiştir konuları anlatıldı.
 \input{sections/first_week/subsections/from_collections_to_museums}
 \input{sections/first_week/subsections/first_attempts}
