--- a/sections/first_week/subsections/first_law.tex
+++ b/sections/first_week/subsections/first_law.tex
@@ -1,5 +1,5 @@
 \subsection{1869 Asar-ı Atika Nizamnamesi}
-\indent\indent 1869 yılına kadar Osmanlı Devleti'nde eski eserlerin durumunu fıkıh dışında belirleyen bir kanun ya da nizamname bulunmamaktaydı. 1869 yılında, Sadrazam Ali Paşa'nın sadareti dönemimde eski eserlerle ilgili ilk nizamname yayınlanmıştır. Bu nizamnamenin giriş kısmında birtakım tespitlere ve hususlara yer verilmiş, Maarif Nezareti'nin girişimiyle kaleme alındığı belirtilip, maddelere geçilmiştir. Tespitler, hususları ve maddeler aşağıdaki gibi özetlenebilir:\cite{karaduman}
+\indent\indent 1869 yılına kadar Osmanlı Devleti'nde eski eserlerin durumunu fıkıh dışında belirleyen bir kanun ya da nizamname bulunmamaktaydı. 1869 yılında, Sadrazam Ali Paşa'nın sadareti dönemimde eski eserlerle ilgili ilk nizamname yayınlanmıştır. Bu nizamnamenin giriş kısmında birtakım tespitlere ve hususlara yer verilmiş, Maarif Nezareti'nin girişimiyle kaleme alındığı belirtilip, maddelere geçilmiştir. Tespitler, hususlar ve maddeler aşağıdaki gibi özetlenebilir:\cite{karaduman}
 \subsubsection{Tespitler}
 \begin{itemize}
     \item Eski eserlerin Osmanlı Devleti topraklarında çokça bulunması
