--- a/sections/first_week/subsections/from_collections_to_museums.tex
+++ b/sections/first_week/subsections/from_collections_to_museums.tex
@@ -1,4 +1,4 @@
 \subsection{Koleksiyonculuktan Müzeye}
 \indent\indent Müzeciliğin kökenleri bulmak için, tarih boyunca insanların oluşturduğu koleksiyonlara bakmalıyız. Genellikle varlıklı ve zengin insanlar, tarih boyunca birtakım objeleri toplayarak koleksiyon haline getirmişlerdir. En erken koleksiyon izlerine Antik Mısır'da rastlıyoruz. Tutankhamon'un mezarı açıldığında, içinden 5000 parçaya yakın kişisel eşyaları ve müceverhat ortaya çıkmıştır. Buna tam anlamıyla bir koleksiyon diyemesek de, erken çağlardan itibaren insanların mücevher gibi değerli eşyaları topladığına dair bir ipucu veriyor bize. Yine Hıristiyanlığın erken dönemlerinden itibaren kiliselerin ikona, kutsal emanet(relic) ve el yazmaları topladığını biliyoruz.\newline
-\indent Koleksiyonculuk, 16.yüzyıl itibariyle daha popüler bir hale gelmeye başladı. Koleksiyon sahiplerinin başında hükümdarlar geliyordu. Antik Mısır'da olduğu mücverehat yine en öenmli kolleksiyon eşyasıydı. Bunun yanında kitaplar, el yazmaları, Rönesans ile birlikte resim, heykel gibi sanat eserleri koleksiyon eşyalarının başında geliyordu. Hükümdarların yanı sıra bazı zenginler ve önemli devlet adamları da koleksiyonerler arasında yerlerini almaya başladı. Toplanan bu eşyalar, ilk başlarda ufak rafların içinde evlerin ve sarayların belli yerlerinde gelen misafirlere sergilenmeye başlandı. Koleksiyon boyutu büyüdükçe, ev ve sarayların içinde belli odalar sergi için ayrılmaya başlandı. Bu odalar, günümüz müzelerin ilk adımı oldu.\newline
-\indent Koleksiyon boyutları büyüdükçe, bunları halka sergilemek için özel bina oluşturma fikri ortaya çıktı. Bu bağlamda 1677 yılında Oxford üniversitesi'nde yapımına başlanan Ashmolean Müzesi, 1683 yılında açıldı. Sir Hans Sloane'nın koleksiyonu, 1753'teki ölümünden sonra British Museum oluşturularak burada sergilenmeye başlandı. Fransız kraliyet koleksiyonları ise 1793'te monarşinin feshi ile kamulaştırıldı ve Louvre Sarayı'nda(bugün Louvre Müzesi) sergilenmeye başlandı. İtalya'da ise Anna Medici Luisa 'de Medici, kişisel sanat koleksiyonunu Floransa'da sergilenmesi şartıyla 1737 yılında Uffizi Galerisi'ne bağışladı. Rusya'da ise II.Katerina, kendi özel koleksiyonu için 1764 yılında Hermitage Müzesi'ni kurdu. Hermitage ancak 1852 yılında halka açıldı. İspanya'da kraliyet koleksiyonunu sergilemek için 1819 yılında Prado Müzesi(\textit{Museo Del Prado}) kuruldu.
+\indent Koleksiyonculuk, 16.yüzyıl itibariyle daha popüler bir hale gelmeye başladı. Koleksiyon sahiplerinin başında hükümdarlar geliyordu. Antik Mısır'da olduğu mücverehat yine en önemli kolleksiyon eşyasıydı. Bunun yanında kitaplar, el yazmaları, Rönesans ile birlikte resim, heykel gibi sanat eserleri koleksiyon eşyalarının başında geliyordu. Hükümdarların yanı sıra bazı zenginler ve önemli devlet adamları da koleksiyonerler arasında yerlerini almaya başladı. Toplanan bu eşyalar, evlerin ve sarayların içinde sergi için özel olarak tasarlanmış odalarda, vitrin ile muhafaza edilerek gelen misafirlere sergilenmeye başlandı. Bu odalar, günümüz müzelerin ilk adımı oldu.\newline
+\indent Koleksiyon boyutları büyüdükçe, bunları halka sergilemek için özel bina oluşturma fikri ortaya çıktı. Bu bağlamda 1677 yılında Oxford üniversitesi'nde yapımına başlanan Ashmolean Müzesi, 1683 yılında açıldı. Sir Hans Sloane'nın koleksiyonu, 1753'teki ölümünden sonra British Museum oluşturularak burada sergilenmeye başlandı. Fransız kraliyet koleksiyonları ise 1793'te monarşinin feshi ile kamulaştırıldı ve Louvre Sarayı'nda(bugün Louvre Müzesi) sergilenmeye başlandı. İtalya'da ise Anna Maria Luisa 'de Medici, kişisel sanat koleksiyonunu Floransa'da sergilenmesi şartıyla 1737 yılında Uffizi Galerisi'ne bağışladı. Rusya'da ise II.Katerina, kendi özel koleksiyonu için 1764 yılında Hermitage Müzesi'ni kurdu. Hermitage ancak 1852 yılında halka açıldı. İspanya'da kraliyet koleksiyonunu sergilemek için 1819 yılında Prado Müzesi(\textit{Museo Del Prado}) kuruldu.
