--- a/sections/second_week/second_week.tex
+++ b/sections/second_week/second_week.tex
@@ -1,4 +1,4 @@
-\section{İkinci Hafta}
+\section{İkinci Hafta - Türk İslam Eserleri Müzesi}
 \indent\indent Müze uzmanlarından Tarık Akar tarafından müzenin üst katındaki sergi alanları gezilip, müzede sergilenen eserler hakkında bilgi verildi.\newpage
 \input{sections/second_week/subsections/museum}
 \input{sections/second_week/subsections/tour}
