--- a/sections/third_week/subsections/ottoman_gallery.tex
+++ b/sections/third_week/subsections/ottoman_gallery.tex
@@ -1,23 +1,19 @@
 \subsection{Osmanlılar Galerisi}
-\indent\indent Müzede en büyük kısım Osmanlı dönemi eserlere ayrılmıştır. Bu salonda ağırlıklı olarak Osmanlı dönemi kilimleri ve halıları bulunmaktadır. Bu halı ve kilimler arasında Holbein, Lotto ve Bellini isimleri göze çarpmaktadır. Mezkur ressamlar, eserlerinde Türk halılarını resmettiğinden dolayı, benzer motifli halılar ressamların isimleri ile anılmaktadır. 15. ve 16.yüzyılda halı kullanımı Avrupa'da yaygın olmadığı için, bu halıları zaman zaman masaların üzerine serilmiş şekilde görebiliyoruz resimlerde. Holbein halılarının ana özelliği, sekizgen şeklinde madalyonlardan ihtiva etmesidir. Hans Holbein'in eseleri ve müzedeki halıların karşılaştırması aşağıda görülebilir. (Şekil \ref{fig:holbein})\newline
+\indent\indent Müzede en büyük kısım Osmanlı dönemi eserlerine ayrılmıştır. Bu salonda ağırlıklı olarak Osmanlı dönemi kilimleri ve halıları bulunmaktadır. Bu halı ve kilimler arasında Holbein, Lotto ve Bellini isimleri göze çarpmaktadır. Mezkur ressamlar, eserlerinde Türk halılarını resmettiğinden dolayı, benzer motifli halılar ressamların isimleri ile anılmaktadır. 15. ve 16.yüzyılda halı kullanımı Avrupa'da yaygın olmadığı için, bu halıları zaman zaman masaların üzerine serilmiş şekilde görebiliyoruz resimlerde. Holbein halılarının ana özelliği, sekizgen şeklinde madalyonları ihtiva etmesidir. Hans Holbein'in eseleri ve müzedeki halıların karşılaştırması aşağıda görülebilir. (Şekil \ref{fig:holbein})\newline
 \begin{figure}[H]
     \centering
     \subfigure[Somerset Ev Konferansı(1604) - Hans Holbein]{
         \includegraphics[height=0.3\textheight,width=0.45\linewidth]{assets/somerset_house_conference.jpg}
     }
-    \hfill
     \subfigure[Elçiler - Hans Holbein]{
         \includegraphics[height=0.3\textheight,width=0.45\linewidth]{assets/envoy.jpg}
     }
-    \vspace{10pt}
     \subfigure[Holbein Halısı - 1]{
         \includegraphics[height=0.3\textheight,width=0.30\linewidth]{assets/holbein_1.jpg}
     }
-    \hfill
     \subfigure[Holbein Halısı - 2]{
         \includegraphics[height=0.3\textheight,width=0.30\linewidth]{assets/holbein_2.png}
     }
-    \hfill
     \subfigure[Holbein Halısı - 3]{
         \includegraphics[height=0.3\textheight,width=0.30\linewidth]{assets/holbein_3.jpg}
     }
@@ -30,7 +26,6 @@
     \subfigure[Ferman ve Kuburlar]{
         \includegraphics[height=0.25\textheight]{assets/kubur.jpg}
     }
-    \hspace{10pt}
     \subfigure[Zübdetü't Tevârîh]{
         \includegraphics[height=0.25\textheight]{assets/zubdetut_tevarih.jpg}
     }
@@ -43,7 +38,6 @@
         \includegraphics[width=0.9\linewidth]{assets/jewelry.jpg}
         \label{fig:jewelry}
     }
-    \hfill
     \subfigure[Mücheverler ve Takılar]{
         \includegraphics[width=0.9\linewidth]{assets/belts.jpg}
         \label{fig:belts}
