--- a/sections/third_week/third_week.tex
+++ b/sections/third_week/third_week.tex
@@ -1,4 +1,4 @@
-\section{Üçüncü Hafta}
+\section{Üçüncü Hafta  - Türk İslam Eserleri Müzesi}
 \indent\indent Müze uzmanlarından Tarık Akar tarafından müzenin alt katındaki sergi alanları gezilip, müzede sergilenen eserler hakkında bilgi verildi. 
 \input{sections/third_week/subsections/seljuks_gallery.tex}
 \input{sections/third_week/subsections/ottoman_gallery.tex}
