--- a/references.bib
+++ b/references.bib
@@ -174,3 +174,31 @@
     publisher={Yapı Kredi Kültüt Sanat Yayıncılık A.Ş.}, 
     pages={175--183}
 }
+
+@inbook{dia_7,
+    author = {Bülent Bilgin},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {2013},
+    chapter = {Yıldız Sarayı},
+    volume = {43},
+    pages = {541--544}
+}
+
+@inbook{sekstant,
+    author = {Şems Aktuğ},
+    title = {Art of Celestial Navigation},
+    publisher = {Piri Reis Üniversitesi},
+    year = {2015},
+    pages = {91--121}
+}
+
+@inbook{dia_8,
+    author = {Cengiz Aydın},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {1988},
+    chapter = {Abdurrahm es-Sûfî},
+    volume = {1},
+    pages = {172--173}
+}
