feat: seventh week is written.

--- a/sections/fifth_week/fifth_week.tex
+++ b/sections/fifth_week/fifth_week.tex
@@ -1,4 +1,5 @@
 \section{Beşinci Hafta - Pera Müzesi}
+\indent\indent Müdürü Özalp Birol Bey Pera Müzesi'nin oluşumunu, tarihini ve gelişimini müzecilik tarihimizdeki yerini anlattı ve sergi alanlarını gezip, sergiler ve eserler hakkında geniş bilgi verdi. Anadolu Ağırlık ve Ölçüleri Koleksiyonu ise Yavuz Selim Güler tarafından gezdirildi.
 \input{sections/fifth_week/subsections/pera_museum}
 \input{sections/fifth_week/subsections/marcel_dzama}
 \input{sections/fifth_week/subsections/samih_rifat}
