--- a/sections/sixth_week/sixth_week.tex
+++ b/sections/sixth_week/sixth_week.tex
@@ -1,3 +1,4 @@
 \section{Altıncı Hafta\\İslam Bilim ve Teknoloji Tarihi Müzesi}
+\indent\indent İslam Bilim ve Teknoloji Tarihi Müzesi, müze uzmanlarından Tuğba Yılmaz tarafından anlatıldı. Sergi alanları gezilip, müzede sergilenen eserler hakkında ve müzenin kurucusu Prof. Dr. Fuat Sezgin hakkında bilgiler verildi.
 \input{sections/sixth_week/subsections/fuat_sezgin}
 \input{sections/sixth_week/subsections/museum}
