--- a/sections/sixth_week/subsections/museum.tex
+++ b/sections/sixth_week/subsections/museum.tex
@@ -21,6 +21,7 @@
     \includegraphics[width=0.95\linewidth]{assets/water_clock.jpg}
     \caption{Fas Su Saati}
 \end{figure}
+\newpage
 \subsection{Savaş Aletleri}
 \begin{wrapfigure}{r}{0.2\textwidth}
     \centering
