--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 \input{sections/fourth_week/fourth_week}
 \input{sections/fifth_week/fifth_week}
 \input{sections/sixth_week/sixth_week}
+\input{sections/seventh_week/seventh_week}
 \newpage
 \printbibliography
 
