feat: eight week is introduced.

--- a/references.bib
+++ b/references.bib
@@ -202,3 +202,13 @@
     volume = {1},
     pages = {172--173}
 }
+
+@inbook{dia_9,
+    author = {Semavi Eyice},
+    title = {Türkiye Diyanet Vakfı İslam Ansiklopedisi},
+    publisher = {Türkiye Diyanet Vakfı},
+    year = {1991},
+    chapter = {Ayasofya Medresesi},
+    volume = {4},
+    pages = {214--215}
+}
