--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,7 @@
 \input{sections/fifth_week/fifth_week}
 \input{sections/sixth_week/sixth_week}
 \input{sections/seventh_week/seventh_week}
+\input{sections/eight_week/eight_week}
 \newpage
 \printbibliography
 
